policies/constraints/require-restricted-pod-security.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata:
  name: namespace-must-enforce-restricted-pod-security
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Namespace"]
  parameters:
    labels:
      - key: pod-security.kubernetes.io/enforce
        allowedRegex: "^restricted$"
